<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddProductActivity"
    android:id="@+id/layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/submitBtn"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Výrobce / Značka: *"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <ImageButton
                android:id="@+id/brandHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/brandInput"></ImageButton>

            <AutoCompleteTextView
                android:id="@+id/brandInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="64"
                app:layout_constraintEnd_toStartOf="@+id/brandHint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"></AutoCompleteTextView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Typ produktu: *"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brandInput"></TextView>

            <ImageButton
                android:id="@+id/typeHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/typeInput"></ImageButton>

            <AutoCompleteTextView
                android:id="@+id/typeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="64"
                app:layout_constraintEnd_toStartOf="@+id/typeHint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"></AutoCompleteTextView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Množství:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeInput"></TextView>

            <ImageButton
                android:id="@+id/amountHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/amountValueInput"></ImageButton>

            <EditText
                android:id="@+id/amountValueInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/amountUnitInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"></EditText>

            <Spinner
                android:id="@+id/amountUnitInput"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/amountValueInput"
                app:layout_constraintEnd_toStartOf="@+id/amountHint"
                app:layout_constraintTop_toBottomOf="@+id/textView8"></Spinner>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Krátký popis: *"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amountValueInput"></TextView>

            <EditText
                android:id="@+id/shortDescInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="128"
                app:layout_constraintEnd_toStartOf="@+id/shortDescHint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"></EditText>

            <ImageButton
                android:id="@+id/shortDescHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/shortDescInput"></ImageButton>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kód produktu: *"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortDescInput"></TextView>

            <ImageButton
                android:id="@+id/codeHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"></ImageButton>

            <EditText
                android:id="@+id/codeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="64"
                app:layout_constraintEnd_toStartOf="@+id/codeHint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"></EditText>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Typ balení:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codeInput"></TextView>

            <ImageButton
                android:id="@+id/packageHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/packageTypeInput"></ImageButton>

            <AutoCompleteTextView
                android:id="@+id/packageTypeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="64"
                app:layout_constraintEnd_toStartOf="@+id/packageHint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"></AutoCompleteTextView>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Obrázek:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/packageTypeInput"></TextView>

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@color/white"
                android:src="@android:drawable/ic_menu_help"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13"></ImageView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/imagePreview"
                app:layout_constraintTop_toBottomOf="@+id/textView13">

                <Button
                    android:id="@+id/takePicBtn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:tooltipText="Vyfotit"
                    app:icon="@android:drawable/ic_menu_camera"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></Button>

                <Button
                    android:id="@+id/selectImageBtn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:tooltipText="Vybrat obrázek"
                    app:icon="@android:drawable/ic_menu_upload"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/takePicBtn"></Button>

                <Button
                    android:id="@+id/clearImageBtn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:tooltipText="Zrušit výběr"
                    app:icon="@android:drawable/ic_menu_close_clear_cancel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selectImageBtn"></Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Poznámky:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagePreview"></TextView>

            <ImageButton
                android:id="@+id/descriptionHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/descriptionInput"></ImageButton>

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLength="1024"
                app:layout_constraintEnd_toStartOf="@+id/descriptionHint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"></EditText>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Uložit"
        app:layout_constraintBottom_toBottomOf="parent"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>