<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/addProduct"
        android:title="Přidat produkt"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:tooltipText="Přidat produkt"
        ></item>

</menu>