...
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaySpinner"
        tools:layout_editor_absoluteX="115dp"></ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/foreground"
        android:contentDescription="Přidat položku"
        android:src="@android:drawable/ic_input_add"
...
            android:layout_margin="16dp"
            android:padding="6dp"
            android:text="Najít produkt"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:background="@color/foreground"
            app:layout_constraintBottom_toBottomOf="@+id/searchProductFab"
            app:layout_constraintEnd_toStartOf="@+id/searchProductFab"
            app:layout_constraintTop_toTopOf="@+id/searchProductFab"></TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/searchProductFab"
            android:layout_width="wrap_content"
...
