<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bagInfoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BagInfoActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Název:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="64"
        app:layout_constraintTop_toBottomOf="@+id/textView15"></EditText>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Poznámky:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"></TextView>

    <EditText
        android:id="@+id/descriptionInput"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:maxLength="1024"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="58dp" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Uložit"
        app:layout_constraintBottom_toBottomOf="parent"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>