<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/editBag"
        android:title="Upravit tašku"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"
        android:tooltipText="Upravit tašku"
        ></item>

    <item
        android:id="@+id/donateBag"
        android:title="Odevzdat tašku"
        android:tooltipText="Odevzdat tašku"></item>

</menu>